[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cave-survival"
description = 'survive in a cave game'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Waylon S. Walker", email = "waylon@waylonwalker.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "debugpy",
  "pygame",
  "pyopengl",
  "typer",
  "rich",
  "pydantic",
  'noise',
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/cave-survival#readme"
Issues = "https://github.com/unknown/cave-survival/issues"
Source = "https://github.com/unknown/cave-survival"

[project.scripts]
cave-survival = "cave_survival.cli:app"

[tool.hatch.version]
path = "cave_survival/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=cave_survival --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "cave_survival/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
